# tablesetting_scenario

./: TODO.org
attache_msgs/srv/: JointControl.srv
state_informer/: CMakeLists.txt  package.xml
state_informer/include/state_informer/: ControlCenter.h
state_informer/src/: ControlCenter.cpp  main.cpp
tablesetting_scenario/: CMakeLists.txt  package.xml
tablesetting_scenario_executive/: .gitignore  CMakeLists.txt  package.xml  tablesetting-scenario-executive.asd
tablesetting_scenario_executive/launch/: tablesetting_scenario.launch  tablesetting_scenario_simulation.launch
tablesetting_scenario_executive/src/: costmap-metadata.lisp  facts.lisp  package.lisp  plan-library.lisp  planner.lisp  reasoning.lisp  sem-map-config.lisp  table-model.lisp  table-setting.lisp  top-level-plans.lisp  utils.lisp
tablesetting_scenario_gazebo/: CMakeLists.txt  package.xml
tablesetting_scenario_gazebo/launch/: pr2.launch  tablesetting_scenario.launch
tablesetting_scenario_gazebo/worlds/: tablesetting_scenario.world
tablesetting_scenario_maps/: CMakeLists.txt  package.xml
tablesetting_scenario_maps/launch/: descriptions.launch  map.launch  tablesetting_scenario_maps.launch
tablesetting_scenario_models/: CMakeLists.txt  package.xml
tablesetting_scenario_models/defs/: helpers.xml  utils.xml
tablesetting_scenario_models/models/accessories/candlestick/: candlestick.stl
tablesetting_scenario_models/models/corn/: corn.urdf.xml
tablesetting_scenario_models/models/cup/: cup.urdf.xml  model.config
tablesetting_scenario_models/models/kelloggs/: kelloggs.urdf.xml
tablesetting_scenario_models/models/knife/: knife.urdf.xml  model.config
tablesetting_scenario_models/models/lion/: lion.urdf.xml
tablesetting_scenario_models/models/oregano/: oregano.urdf.xml
tablesetting_scenario_models/models/pancakemix/: pancakemix.urdf.xml
tablesetting_scenario_models/models/plate/: model.config  plate.urdf.xml
tablesetting_scenario_models/models/salt/: salt.urdf.xml
tablesetting_scenario_models/models/saltdispenser/: saltdispenser.urdf.xml
tablesetting_scenario_models/models/shopping_area/: shopping_area.urdf.xml
tablesetting_scenario_models/models/shopping_rack/: shopping_rack.urdf.xml
tablesetting_scenario_models/models/tomatosauce/: tomatosauce.urdf.xml
tablesetting_scenario_models/owl/: eating_area.owl  objects.owl  shopping_area.owl  shopping_rack.owl  table.owl
tablesetting_scenario_reasoning/: .gitignore  CMakeLists.txt  build.gradle  package.xml  settings.gradle
tablesetting_scenario_reasoning/launch/: tablesetting_scenario_reasoning.launch
tablesetting_scenario_reasoning/prolog/: init.pl  tablesetting_scenario_reasoning.pl
tablesetting_scenario_reasoning/tablesetting_scenario_reasoning/src/main/java/org/knowrob/tablesetting_scenario_reasoning/: TablesettingReasoner.java
