<?xml version="1.0"?>
<package>
  <name>tablesetting_scenario</name>
  <version>0.0.1</version>
  <description>
    
    Metapackage for tablesetting_scenario related code, models, and meta
    data.
    
  </description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>tablesetting_scenario_models</run_depend>
  <run_depend>tablesetting_scenario_maps</run_depend>
  <run_depend>tablesetting_scenario_executive</run_depend>
  <run_depend>tablesetting_scenario_gazebo</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
