<?xml version="1.0"?>
<package>
  <name>tablesetting_scenario_gazebo</name>
  <version>0.0.1</version>
  <description>
    
    Tablesetting Scenario related Gazebo setup and resource files.
    
  </description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>tablesetting_scenario_models</run_depend>
  
  <export>
    <gazebo plugin_path="${prefix}/plugins"/>
  </export>
</package>
